--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "flutter_application",
-    "short_name": "flutter_application",
+    "name": "Tic-Tac-Toe Game",
+    "short_name": "tic-tac-toe",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "My first baby steps in Flutter",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
